 * Lua API:
   * New wesnoth.set_team_id function can change flag, color, or both; it automatically
     updates cached flag info for you (but you may still need to redraw to see it).
   * The wesnoth.place_shroud and wesnoth.clear_shroud functions can alter shroud data
     for a single side. They accept a list of locations, a shroud data string, or the
     special value "all".
   * New Lua API functions for altering AI:
     * wesnoth.switch_ai replaces the entire AI with a definition from a file
     * wesnoth.append_ai appends AI parameters to the configuation; supports goals,
       stages, and simple aspects.
       (Aspect tags are not fully parsed; only the id and facet subtags are used.)
     * wesnoth.add_ai_component, delete_ai_component, change_ai_component
       These do the work of the [modify_ai] tag for a single side.
   * Side proxy changes:
     * flag and flag_icon are never an empty string
     * New mutable keys: suppress_end_turn_confirmation, share_vision
     * New read-only keys: share_maps, share_view
     * Existing keys made mutable: shroud, fog, flag, flag_icon
   * wesnoth.scroll_to_tile now accepts a third boolean argument - if true, the scroll
     is skipped when the tile is already visible onscreen.
 * WML Engine:
   * Removed LOW_MEM option when building.
   * Add color= attribute to [floating_text]
   * New ability_type key in standard unit filters matches if the unit has any
     ability of the specified type (tag name).

Version 1.13.6:
 * AI:
   * Added new high_xp_attack candidate action to default AI. This CA performs
     attacks on enemy units so close to leveling that the default AI's combat CA
     would not attack them.
   * New Micro AI: Assassin Squad AI
   * Fix bug #23720, AI units with max_moves=0 do not attack.
   * Fix bug #22179: [disable] weapon special is ignored by AI. A second
     instance of the AI also ignoring this special under different circumstances
     has also been fixed.